salesforce_package/force-app/main/default/objects/Audit_Assignment__c/Audit_Assignment__c.object-meta.xml
<CustomObject>
    <label>Audit Assignment</label>
    <pluralLabel>Audit Assignments</pluralLabel>
    <nameField>
        <label>Audit Assignment Number</label>
        <displayFormat>AA-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Auditor_Label__c</columns>
        <columns>Implementing_Agency__c</columns>
        <columns>Work_Ref__c</columns>
        <columns>Day_From__c</columns>
        <columns>Exposure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Audit Assignments</label>
    </listViews>
    <listViews>
        <fullName>Still_To_Visit</fullName>
        <columns>NAME</columns>
        <columns>Auditor_Label__c</columns>
        <columns>Implementing_Agency__c</columns>
        <columns>Work_Ref__c</columns>
        <columns>Day_From__c</columns>
        <columns>Exposure__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>Still To Visit</label>
    </listViews>
    <listViews>
        <fullName>Same_Trip</fullName>
        <columns>NAME</columns>
        <columns>Implementing_Agency__c</columns>
        <columns>Work_Ref__c</columns>
        <columns>Cost_Days__c</columns>
        <columns>Exposure__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Repeat_Visit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reached On A Trip Already Being Made</label>
    </listViews>
</CustomObject>