salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Key__c</fullName>
    <label>Assignment Key</label>
    <type>Text</type>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <length>80</length>
</CustomField>