salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <label>Auditor</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>