salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Auditor_Label__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Label__c</fullName>
    <label>Assigned To</label>
    <type>Text</type>
    <length>80</length>
</CustomField>