salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Confidence_Band__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Band__c</fullName>
    <label>Confidence Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>