salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Cost_Days__c.field-meta.xml
<CustomField>
    <fullName>Cost_Days__c</fullName>
    <label>Auditor-Days</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>