salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Day_From__c.field-meta.xml
<CustomField>
    <fullName>Day_From__c</fullName>
    <label>Day From</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>