salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Day_To__c.field-meta.xml
<CustomField>
    <fullName>Day_To__c</fullName>
    <label>Day To</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>