salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Investigation_Case__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Case__c</fullName>
    <label>Investigation Case</label>
    <type>Lookup</type>
    <referenceTo>Investigation_Case__c</referenceTo>
    <relationshipName>Audit_Assignments</relationshipName>
    <relationshipLabel>Audit Assignments</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>