salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Not_A_Fraud_Finding__c.field-meta.xml
<CustomField>
    <fullName>Not_A_Fraud_Finding__c</fullName>
    <label>Investigation Lead, Not A Finding</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>