salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Plan_Budget_Days__c.field-meta.xml
<CustomField>
    <fullName>Plan_Budget_Days__c</fullName>
    <label>Plan Budget (Auditor-Days)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>