salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Repeat_Visit__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Visit__c</fullName>
    <label>Same Trip - No Extra Travel</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>