salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Team_Size__c</fullName>
    <label>Team Size</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>