salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Visit_Order__c.field-meta.xml
<CustomField>
    <fullName>Visit_Order__c</fullName>
    <label>Visit Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>