salesforce_package/force-app/main/default/objects/Audit_Assignment__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Travelling</fullName>
                </value>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
                <value>
                    <fullName>Could Not Reach</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>